--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                         </li>
-                        <li class="nav-item">
+                        <!-- <li class="nav-item">
                             <a class="nav-link" href="about.html">My Intro</a>
-                        </li>
+                        </li> -->
                         <li class="nav-item">
                             <a class="nav-link" href="blog.html">Blog</a>
                         </li>
@@ -134,33 +134,33 @@
         <div class="container pt-lg-4">
             <div class="grids-area-hny main-cont-wthree-fea row">
                 <div class="col-md-3 col-sm-4 ps-xl-5">
-                    <h4 class="ab-exper-count mb-sm-4 ps-lg-4">22</h4>
+                    <h4 class="ab-exper-count mb-sm-4 ps-lg-4">2+</h4>
                     <p class="ab-content ps-lg-4">years of experience working</p>
                 </div>
                 <div class="col-xl-8 col-md-9 col-sm-8 offset-xl-1 ps-xl-0 pe-xl-5 mt-sm-0 mt-4">
-                    <h3 class="title-style mb-sm-5 mb-4">I'm a designer & developer with a passion for web design</h3>
+                    <h3 class="title-style mb-sm-5 mb-4">I'm a Developer & DevOps Engineer</h3>
                     <div class="row">
                         <div class="col-lg-4 col-md-6 grids-feature">
                             <div class="area-box active">
                                 <div class="icon-style">
-                                    <i class="fas fa-lightbulb"></i>
+                                    <i class="fas fa-laptop-code"></i>
                                 </div>
-                                <h4><a href="#feature" class="title-head">Creative Design</a></h4>
-                                <a href="about.html" class="btn more p-0">Explore More<i
-                                        class="fas fa-long-arrow-alt-right ms-1"></i></a>
+                                <h4><a href="#feature" class="title-head">Backend Developer</a></h4>
+                                <!-- <a href="about.html" class="btn more p-0">Explore More<i
+                                        class="fas fa-long-arrow-alt-right ms-1"></i></a> -->
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-6 grids-feature mt-md-0 mt-4">
                             <div class="area-box">
                                 <div class="icon-style">
-                                    <i class="fas fa-laptop-code"></i>
+                                    <i class="fas fa-cog"></i>
                                 </div>
-                                <h4><a href="#feature" class="title-head">Web Design</a></h4>
-                                <a href="about.html" class="btn more p-0">Explore More<i
-                                        class="fas fa-long-arrow-alt-right ms-1"></i></a>
+                                <h4><a href="#feature" class="title-head">Devops</a></h4>
+                                <!-- <a href="about.html" class="btn more p-0">Explore More<i
+                                        class="fas fa-long-arrow-alt-right ms-1"></i></a> -->
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-6 grids-feature mt-lg-0 mt-4">
+                        <!-- <div class="col-lg-4 col-md-6 grids-feature mt-lg-0 mt-4">
                             <div class="area-box">
                                 <div class="icon-style">
                                     <i class="fas fa-layer-group"></i>
@@ -169,7 +169,7 @@
                                 <a href="about.html" class="btn more p-0">Explore More<i
                                         class="fas fa-long-arrow-alt-right ms-1"></i></a>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
@@ -189,37 +189,35 @@
                 <div class="col-lg-8 ps-lg-5 mt-lg-0 mt-5">
                     <h5 class="title-small mb-1">My Intro</h5>
                     <h3 class="title-style">About Me</h3>
-                    <p class="mt-3">Lorem ipsum viverra feugiat. Pellen tesque libero ut justo,
-                        ultrices in ligula. Semper at tempufddfel. Lorem ipsum dolor sit amet consectetur
-                        adipisicing
-                        elit. Non quae, fugiat consequatur voluptatem nihil ad. Lorem ipsum dolor sit amet.</p>
+                    <p class="mt-3">An enthusiastic employee who tries to solve a given business problem with Nodejs and 
+                        delivers quality features in time with responsibility. Nodejs uses almost all companies because of its high performance which is why past 2+ years, I am writing all the business logic in Node Js which is giving a very impressive result but I believe that according to market or client demand we need to also adopt new technology because learning is a process which should never end.</p>
                     <div class="my-info mt-md-5 mt-4">
                         <ul class="single-info">
                             <li class="name-style">Name</li>
                             <li>:</li>
                             <li>
-                                <p>Mary Ateer</p>
+                                <p>Rakesh Kumar Sharma</p>
                             </li>
                         </ul>
-                        <ul class="single-info">
+                        <!-- <ul class="single-info">
                             <li class="name-style">Age</li>
                             <li>:</li>
                             <li>
                                 <p>26 Years</p>
                             </li>
-                        </ul>
+                        </ul> -->
                         <ul class="single-info">
                             <li class="name-style">From</li>
                             <li>:</li>
                             <li>
-                                <p>London, UK</p>
+                                <p>Bihar, Samastipur</p>
                             </li>
                         </ul>
                         <ul class="single-info">
                             <li class="name-style">Email</li>
                             <li>:</li>
                             <li>
-                                <p><a href="mailto:maryateer@mail.com">maryateer@mail.com</a></p>
+                                <p><a target="_blank" href="mailto:airrakeshkumarsharma@gmail.com">airrakeshkumarsharma@gmail.com</a></p>
                             </li>
                         </ul>
                     </div>
@@ -243,29 +241,11 @@
                     <div class="timeline">
                         <div class="column">
                             <div class="title">
-                                <h2>Master in Computer Engineering</h2>
+                                <h2>Bachelor in ECE</h2>
                             </div>
                             <div class="description">
-                                <p>Harvard University</p>
-                                <h6><i class="fas fa-calendar-alt"></i> 2015 - 2017</h6>
-                            </div>
-                        </div>
-                        <div class="column">
-                            <div class="title">
-                                <h2>Bachelor in Computer Engineering</h2>
-                            </div>
-                            <div class="description">
-                                <p>University of California</p>
-                                <h6><i class="fas fa-calendar-alt"></i> 2014 - 2015</h6>
-                            </div>
-                        </div>
-                        <div class="column">
-                            <div class="title">
-                                <h2>Computer Science</h2>
-                            </div>
-                            <div class="description">
-                                <p>International University</p>
-                                <h6><i class="fas fa-calendar-alt"></i> 2013 - 2014</h6>
+                                <p>JNTUK</p>
+                                <h6><i class="fas fa-calendar-alt"></i> 2016 - 2020</h6>
                             </div>
                         </div>
                     </div>
@@ -276,29 +256,29 @@
                     <div class="timeline">
                         <div class="column">
                             <div class="title">
-                                <h2>Sr. Font End Developer</h2>
+                                <h2>SDE2</h2>
                             </div>
                             <div class="description">
-                                <p>W3Layouts Pvt Lmt.</p>
-                                <h6><i class="fas fa-calendar-alt"></i> 2020 - Current</h6>
+                                <p>Board Infinity</p>
+                                <h6><i class="fas fa-calendar-alt"></i> Mar, 2022 - Current</h6>
                             </div>
                         </div>
                         <div class="column">
                             <div class="title">
-                                <h2>Jr. Font End Developer</h2>
+                                <h2>SDE1</h2>
                             </div>
                             <div class="description">
-                                <p>W3Layouts</p>
-                                <h6><i class="fas fa-calendar-alt"></i> 2018 - 2020</h6>
+                                <p>Board Infinity</p>
+                                <h6><i class="fas fa-calendar-alt"></i> May, 2020 - 2022</h6>
                             </div>
                         </div>
                         <div class="column">
                             <div class="title">
-                                <h2>HTML Developer</h2>
+                                <h2>Jr. Developer</h2>
                             </div>
                             <div class="description">
-                                <p>Agile info</p>
-                                <h6><i class="fas fa-calendar-alt"></i> 2017 - 2018</h6>
+                                <p>Mounty Outdoor adventure</p>
+                                <h6><i class="fas fa-calendar-alt"></i> Jan, 2019 - May, 2020</h6>
                             </div>
                         </div>
                     </div>
@@ -309,7 +289,7 @@
     <!-- //qualification section -->
 
     <!-- skills section -->
-    <section class="w3l-progress py-5" id="progress">
+    <!-- <section class="w3l-progress py-5" id="progress">
         <div class="container py-md-5 py-4">
             <div class="title-heading-w3 text-center mb-sm-5 mb-4">
                 <h5 class="title-small mb-1">My Skills</h5>
@@ -318,7 +298,7 @@
             <div class="row py-lg-4">
                 <div class="col-lg-6 pe-lg-5">
                     <div class="progress-info info1">
-                        <h6 class="progress-tittle">Web Design <span class="">80%</span></h6>
+                        <h6 class="progress-tittle">Nodejs <span class="">80%</span></h6>
                         <div class="progress">
                             <div class="progress-bar progress-bar-striped gradient-1" role="progressbar"
                                 style="width: 80%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
@@ -388,11 +368,11 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- //skills section -->
 
     <!-- projects section -->
-    <section class="w3l-gallery pb-5" id="gallery">
+    <!-- <section class="w3l-gallery pb-5" id="gallery">
         <div class="container py-md-5 py-4">
             <div class="title-heading-w3 text-center mb-sm-5 mb-4">
                 <h5 class="title-small mb-1">Portfolio</h5>
@@ -471,11 +451,11 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- //projects section -->
 
     <!-- home service section -->
-    <section class="w3l-servicesblock1 py-5" id="services">
+    <!-- <section class="w3l-servicesblock1 py-5" id="services">
         <div class="container py-md-5 py-4">
             <div class="title-heading-w3 text-center mb-sm-5 mb-4">
                 <h5 class="title-small mb-1">What i do?</h5>
@@ -569,11 +549,11 @@
                 <a href="services.html" class="btn btn-style">Learn More</a>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- //home service section -->
 
     <!-- testimonials section -->
-    <section class="w3l-testimonials py-5" id="testimonials">
+    <!-- <section class="w3l-testimonials py-5" id="testimonials">
         <div class="container py-md-5 py-4">
             <div class="row">
                 <div class="col-md-10 mx-auto">
@@ -654,55 +634,11 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- //testimonials section -->
 
     <!-- footer -->
-    <footer class="footer-w3ls text-center py-5">
-        <div class="container pt-4">
-            <div class="mx-auto" style="max-width:600px;">
-                <a href="index.html" class="footer-logo py-1">
-                    <i class="fas fa-bold"></i>.
-                </a>
-                <p class="mt-4 text-white">Itaque earum rerum hic tenetur asaItaque
-                    earum rerum hic tenetur asap iente delectus ac elit in
-                    coeiciendis maiores.</p>
-                <div class="social-icons-main mt-4 pb-3">
-                    <ul class="social-icons3">
-                        <li>
-                            <a href="#facebook">
-                                <i class="fab fa-facebook-f"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#twitter">
-                                <i class="fab fa-twitter"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#linkedinin">
-                                <i class="fab fa-linkedin-in"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#dribbble">
-                                <i class="fab fa-dribbble"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#instagram">
-                                <i class="fab fa-instagram"></i>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-            <!-- copyright -->
-            <p class="copy-right-w3 text-white mt-5 pt-4">© 2021 Biodata. All rights reserved | Design by
-                <a href="http://w3layouts.com" target="_blank"> W3layouts.</a>
-            </p>
-        </div>
-    </footer>
+   
     <!-- //footer -->
 
     <!-- Js scripts -->
