Changed the three pages

--- a/contact.html
+++ b/contact.html
@@ -36,21 +36,21 @@ Author URL: http://w3layouts.com
                         <li class="nav-item">
                             <a class="nav-link" aria-current="page" href="index.html">Home</a>
                         </li>
-                        <li class="nav-item">
+                        <!-- <li class="nav-item">
                             <a class="nav-link" href="about.html">My Intro</a>
-                        </li>
+                        </li> -->
                         <li class="nav-item">
-                            <a class="nav-link" href="services.html">Services</a>
+                            <a class="nav-link" href="blog.html">Services</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" href="contact.html">Contact</a>
                         </li>
                     </ul>
-                    <form action="#search" method="GET" class="d-flex search-header">
+                    <!-- <form action="#search" method="GET" class="d-flex search-header">
                         <input class="form-control" type="search" placeholder="Enter Keyword..." aria-label="Search"
                             required>
                         <button class="btn btn-style" type="submit">Search</button>
-                    </form>
+                    </form> -->
                 </div>
                 <!-- toggle switch for light and dark theme -->
                 <div class="cont-ser-position">
@@ -101,12 +101,12 @@ Author URL: http://w3layouts.com
                         much info, as possible so
                         we can get the most out of our first catch-up.</p>
                     <div class="cont-details">
-                        <p><i class="fas fa-map-marker-alt"></i>10001, 5th Avenue, 12202 street, USA.</p>
-                        <p><i class="fas fa-phone-alt"></i><a href="tel:+1(21) 234 4567">+1(21) 112 7368</a></p>
-                        <p><i class="fas fa-envelope-open-text"></i><a href="mailto:example@mail.com"
-                                class="mail">example@mail.com</a></p>
+                        <!-- <p><i class="fas fa-map-marker-alt"></i>10001, 5th Avenue, 12202 street, USA.</p> -->
+                        <p><i class="fas fa-envelope"></i><a target="_blank" href="https://api.whatsapp.com/send/?phone=917075859034">917075859034</a></p>
+                        <p><i class="fas fa-envelope-open-text"></i><a href="mailto:airrakeshkumarsharma@mail.com"
+                                class="mail">airrakeshkumarsharma@mail.com</a></p>
                     </div>
-                    <h4 class="mb-3 mt-5">Follow Me</h4>
+                    <!-- <h4 class="mb-3 mt-5">Follow Me</h4>
                     <ul class="social-icons-contact">
                         <li>
                             <a href="#twitter">
@@ -133,9 +133,9 @@ Author URL: http://w3layouts.com
                                 <i class="fab fa-instagram"></i>
                             </a>
                         </li>
-                    </ul>
+                    </ul> -->
                 </div>
-                <div class="col-md-6 contact-right mt-md-0 mt-5 ps-lg-0">
+                <!-- <div class="col-md-6 contact-right mt-md-0 mt-5 ps-lg-0">
                     <form action="https://sendmail.w3layouts.com/submitForm" method="post" class="signin-form">
                         <div class="input-grids">
                             <input type="text" name="w3lName" id="w3lName" placeholder="Your Name*"
@@ -153,16 +153,16 @@ Author URL: http://w3layouts.com
                         </div>
                         <button class="btn btn-style">Send Message</button>
                     </form>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
     <!-- map -->
-    <div class="map-iframe">
+    <!-- <div class="map-iframe">
         <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d317718.69319292053!2d-0.3817765050863085!3d51.528307984912544!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d8a00baf21de75%3A0x52963a5addd52a99!2sLondon%2C+UK!5e0!3m2!1sen!2spl!4v1562654563739!5m2!1sen!2spl"
             width="100%" height="400" frameborder="0" style="border: 0px;" allowfullscreen=""></iframe>
-    </div>
+    </div> -->
     <!-- //contact -->
 
     <!-- footer -->
@@ -172,43 +172,31 @@ Author URL: http://w3layouts.com
                 <a href="index.html" class="footer-logo py-1">
                     <i class="fas fa-bold"></i>.
                 </a>
-                <p class="mt-4 text-white">Itaque earum rerum hic tenetur asaItaque
-                    earum rerum hic tenetur asap iente delectus ac elit in
-                    coeiciendis maiores.</p>
+                <p class="mt-4 text-white">Connect me on following Social media.</p>
                 <div class="social-icons-main mt-4 pb-3">
                     <ul class="social-icons3">
                         <li>
-                            <a href="#facebook">
-                                <i class="fab fa-facebook-f"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#twitter">
-                                <i class="fab fa-twitter"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#linkedinin">
+                            <a href="https://www.linkedin.com/in/rakesh-kumar-sharma-2b98a3157">
                                 <i class="fab fa-linkedin-in"></i>
                             </a>
                         </li>
                         <li>
-                            <a href="#dribbble">
-                                <i class="fab fa-dribbble"></i>
+                            <a href="https://twitter.com/rakesh_kr_1">
+                                <i class="fab fa-twitter"></i>
                             </a>
                         </li>
                         <li>
-                            <a href="#instagram">
-                                <i class="fab fa-instagram"></i>
+                            <a href="https://www.facebook.com/rkpranjalsharma">
+                                <i class="fab fa-facebook-f"></i>
                             </a>
                         </li>
                     </ul>
                 </div>
             </div>
             <!-- copyright -->
-            <p class="copy-right-w3 text-white mt-5 pt-4">© 2021 Biodata. All rights reserved | Design by
+            <!-- <p class="copy-right-w3 text-white mt-5 pt-4">© 2021 Biodata. All rights reserved | Design by
                 <a href="http://w3layouts.com" target="_blank"> W3layouts.</a>
-            </p>
+            </p> -->
         </div>
     </footer>
     <!-- //footer -->
