--- a/blog.html
+++ b/blog.html
@@ -36,21 +36,21 @@ Author URL: http://w3layouts.com
                         <li class="nav-item">
                             <a class="nav-link" aria-current="page" href="index.html">Home</a>
                         </li>
-                        <li class="nav-item">
+                        <!-- <li class="nav-item">
                             <a class="nav-link" href="about.html">My Intro</a>
-                        </li>
+                        </li> -->
                         <li class="nav-item">
-                            <a class="nav-link active" href="services.html">Services</a>
+                            <a class="nav-link active" href="blog.html">Blog</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="contact.html">Contact</a>
                         </li>
                     </ul>
-                    <form action="#search" method="GET" class="d-flex search-header">
+                    <!-- <form action="#search" method="GET" class="d-flex search-header">
                         <input class="form-control" type="search" placeholder="Enter Keyword..." aria-label="Search"
                             required>
                         <button class="btn btn-style" type="submit">Search</button>
-                    </form>
+                    </form> -->
                 </div>
                 <!-- toggle switch for light and dark theme -->
                 <div class="cont-ser-position">
@@ -76,10 +76,10 @@ Author URL: http://w3layouts.com
     <section class="inner-banner py-5">
         <div class="w3l-breadcrumb py-lg-5">
             <div class="container pt-4 pb-sm-4">
-                <h4 class="inner-text-title font-weight-bold pt-sm-5 pt-4">Services</h4>
+                <h4 class="inner-text-title font-weight-bold pt-sm-5 pt-4">Blogs</h4>
                 <ul class="breadcrumbs-custom-path">
                     <li><a href="index.html">Home</a></li>
-                    <li class="active"><i class="fas fa-angle-right mx-2"></i>Services</li>
+                    <li class="active"><i class="fas fa-angle-right mx-2"></i>Blogs</li>
                 </ul>
             </div>
         </div>
@@ -151,7 +151,7 @@ Author URL: http://w3layouts.com
     <!-- //grids section -->
 
     <!-- service section -->
-    <section class="w3l-servicesblock1 py-5" id="services">
+    <!-- <section class="w3l-servicesblock1 py-5" id="services">
         <div class="container py-md-5 py-4">
             <div class="title-heading-w3 text-center mb-sm-5 mb-4">
                 <h5 class="title-small mb-1">What i do?</h5>
@@ -245,11 +245,11 @@ Author URL: http://w3layouts.com
                 <a href="services.html" class="btn btn-style">Learn More</a>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- //service section -->
 
     <!-- pricing section -->
-    <section class="w3l-pricing py-5">
+    <!-- <section class="w3l-pricing py-5">
         <div class="container py-md-5 py-4">
             <div class="title-heading-w3 text-center mb-sm-5 mb-4">
                 <h5 class="title-small mb-1">Get Started</h5>
@@ -323,7 +323,7 @@ Author URL: http://w3layouts.com
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- //pricing section -->
 
     <!-- footer -->
@@ -333,43 +333,31 @@ Author URL: http://w3layouts.com
                 <a href="index.html" class="footer-logo py-1">
                     <i class="fas fa-bold"></i>.
                 </a>
-                <p class="mt-4 text-white">Itaque earum rerum hic tenetur asaItaque
-                    earum rerum hic tenetur asap iente delectus ac elit in
-                    coeiciendis maiores.</p>
+                <p class="mt-4 text-white">Connect me on following Social media.</p>
                 <div class="social-icons-main mt-4 pb-3">
                     <ul class="social-icons3">
                         <li>
-                            <a href="#facebook">
-                                <i class="fab fa-facebook-f"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#twitter">
-                                <i class="fab fa-twitter"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#linkedinin">
+                            <a href="https://www.linkedin.com/in/rakesh-kumar-sharma-2b98a3157">
                                 <i class="fab fa-linkedin-in"></i>
                             </a>
                         </li>
                         <li>
-                            <a href="#dribbble">
-                                <i class="fab fa-dribbble"></i>
+                            <a href="https://twitter.com/rakesh_kr_1">
+                                <i class="fab fa-twitter"></i>
                             </a>
                         </li>
                         <li>
-                            <a href="#instagram">
-                                <i class="fab fa-instagram"></i>
+                            <a href="https://www.facebook.com/rkpranjalsharma">
+                                <i class="fab fa-facebook-f"></i>
                             </a>
                         </li>
                     </ul>
                 </div>
             </div>
             <!-- copyright -->
-            <p class="copy-right-w3 text-white mt-5 pt-4">© 2021 Biodata. All rights reserved | Design by
+            <!-- <p class="copy-right-w3 text-white mt-5 pt-4">© 2021 Biodata. All rights reserved | Design by
                 <a href="http://w3layouts.com" target="_blank"> W3layouts.</a>
-            </p>
+            </p> -->
         </div>
     </footer>
     <!-- //footer -->
