--- a/index.html
+++ b/index.html
@@ -638,7 +638,40 @@
     <!-- //testimonials section -->
 
     <!-- footer -->
-   
+    <footer class="footer-w3ls text-center py-5">
+        <div class="container pt-4">
+            <div class="mx-auto" style="max-width:600px;">
+                <a href="index.html" class="footer-logo py-1">
+                    <i class="fas fa-bold"></i>.
+                </a>
+                <p class="mt-4 text-white">Connect me on following Social media</p>
+                <div class="social-icons-main mt-4 pb-3">
+                    <ul class="social-icons3">
+                        <li>
+                            <a target="_blank" href="https://www.linkedin.com/in/rakesh-kumar-sharma-2b98a3157">
+                                <i class="fab fa-linkedin-in"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a target="_blank" href="https://twitter.com/rakesh_kr_1">
+                                <i class="fab fa-twitter"></i>
+                            </a>
+                        </li>
+                       
+                        <li>
+                            <a target="_blank" href="https://www.facebook.com/rkpranjalsharma">
+                                <i class="fab fa-facebook-f"></i>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <!-- copyright -->
+            <!-- <p class="copy-right-w3 text-white mt-5 pt-4">© 2021 Biodata. All rights reserved | Design by
+                <a href="http://w3layouts.com" target="_blank"> W3layouts.</a>
+            </p> -->
+        </div>
+    </footer>
     <!-- //footer -->
 
     <!-- Js scripts -->
