uploaded the blogs

--- a/blog.html
+++ b/blog.html
@@ -90,57 +90,50 @@ Author URL: http://w3layouts.com
     <section class="w3l-bottom-grids-6 py-5" id="features">
         <div class="container py-md-5 py-4">
             <div class="title-heading-w3 text-center mb-sm-5 mb-4">
-                <h5 class="title-small mb-1">specialized In</h5>
-                <h3 class="title-style">What I Offer</h3>
+                <!-- <h5 class="title-small mb-1">Blogs</h5> -->
+                <h3 class="title-style">Blogs</h3>
             </div>
             <div class="row">
                 <div class="col-lg-3 col-md-6 grids-feature">
-                    <div class="area-box active">
+                    <div class="area-box">
                         <div class="icon-style">
                             <i class="fas fa-lightbulb"></i>
                         </div>
-                        <h4><a href="#feature" class="title-head">Creative Design</a></h4>
-                        <a href="about.html" class="btn more p-0">Explore More<i
+                        <h4><a target="_blank" href="https://towardsdev.com/nodejs-app-kubernetes-for-beginners-5a6824af9fab" class="title-head">Nodejs app+Kubernetes for beginners</a></h4>
+                        <a target="_blank" href="https://towardsdev.com/nodejs-app-kubernetes-for-beginners-5a6824af9fab" class="btn more p-0">Explore More<i
                                 class="fas fa-long-arrow-alt-right ms-1"></i></a>
                     </div>
                 </div>
+                
                 <div class="col-lg-3 col-md-6 grids-feature">
-                    <div class="area-box active">
+                    <div class="area-box">
                         <div class="icon-style">
                             <i class="fas fa-lightbulb"></i>
                         </div>
-                        <h4><a href="#feature" class="title-head">Creative Design</a></h4>
-                        <a href="about.html" class="btn more p-0">Explore More<i
+                        <h4><a target="_blank" href="https://towardsdev.com/multi-docker-nodejs-app-setup-4fa9c1f1645e" class="title-head">Multi docker Nodejs app setup</a></h4>
+                        <a target="_blank" href="https://towardsdev.com/multi-docker-nodejs-app-setup-4fa9c1f1645e" class="btn more p-0">Explore More<i
                                 class="fas fa-long-arrow-alt-right ms-1"></i></a>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 grids-feature mt-md-0 mt-4">
+
+                <div class="col-lg-3 col-md-6 grids-feature">
                     <div class="area-box">
                         <div class="icon-style">
-                            <i class="fas fa-laptop-code"></i>
+                            <i class="fas fa-lightbulb"></i>
                         </div>
-                        <h4><a href="#feature" class="title-head">Web Design</a></h4>
-                        <a href="about.html" class="btn more p-0">Explore More<i
+                        <h4><a target="_blank" href="https://rakesh1996.medium.com/containerise-nodejs-with-docker-8185af9e2c95" class="title-head">Containerize Nodejs with Docker                        </a></h4>
+                        <a target="_blank" href="https://rakesh1996.medium.com/containerise-nodejs-with-docker-8185af9e2c95" class="btn more p-0">Explore More<i
                                 class="fas fa-long-arrow-alt-right ms-1"></i></a>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 grids-feature mt-lg-0 mt-4">
+                
+                <div class="col-lg-3 col-md-6 grids-feature">
                     <div class="area-box">
                         <div class="icon-style">
-                            <i class="fas fa-layer-group"></i>
+                            <i class="fas fa-lightbulb"></i>
                         </div>
-                        <h4><a href="#feature" class="title-head">Brand Identity</a></h4>
-                        <a href="about.html" class="btn more p-0">Explore More<i
-                                class="fas fa-long-arrow-alt-right ms-1"></i></a>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 grids-feature mt-lg-0 mt-4">
-                    <div class="area-box">
-                        <div class="icon-style">
-                            <i class="fas fa-chart-pie"></i>
-                        </div>
-                        <h4><a href="#feature" class="title-head">Graphic Design</a></h4>
-                        <a href="about.html" class="btn more p-0">Explore More<i
+                        <h4><a target="_blank" href="https://rakesh1996.medium.com/stripe-payment-gateway-integration-1-5dfc5be69e5b" class="title-head">Stripe Payment Gateway Integration</a></h4>
+                        <a target="_blank" href="https://rakesh1996.medium.com/stripe-payment-gateway-integration-1-5dfc5be69e5b" class="btn more p-0">Explore More<i
                                 class="fas fa-long-arrow-alt-right ms-1"></i></a>
                     </div>
                 </div>
