--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@ Author URL: http://w3layouts.com
                             <a class="nav-link" href="about.html">My Intro</a>
                         </li> -->
                         <li class="nav-item">
-                            <a class="nav-link" href="blog.html">Services</a>
+                            <a class="nav-link" href="blog.html">Blog</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" href="contact.html">Contact</a>
