--- a/blog.html
+++ b/blog.html
@@ -23,7 +23,7 @@ Author URL: http://w3layouts.com
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light">
                 <a class="navbar-brand" href="index.html">
-                    <i class="fas fa-bold"></i>.
+                    <img class="fas fa-bold" width="120" height="50" src="assets/images/logo.png" alt="RK Tech">
                 </a>
                 <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false"
@@ -324,7 +324,7 @@ Author URL: http://w3layouts.com
         <div class="container pt-4">
             <div class="mx-auto" style="max-width:600px;">
                 <a href="index.html" class="footer-logo py-1">
-                    <i class="fas fa-bold"></i>.
+                    <img class="fas fa-bold" width="120" height="50" src="assets/images/logo.png" alt="RK Tech">
                 </a>
                 <p class="mt-4 text-white">Connect me on following Social media.</p>
                 <div class="social-icons-main mt-4 pb-3">
