--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@ Author URL: http://w3layouts.com
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light">
                 <a class="navbar-brand" href="index.html">
-                    <i class="fas fa-bold"></i>.
+                    <img class="fas fa-bold" width="120" height="50" src="assets/images/logo.png" alt="RK Tech">
                 </a>
                 <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false"
@@ -96,10 +96,7 @@ Author URL: http://w3layouts.com
             <div class="row contact-block">
                 <div class="col-md-6 contact-left pe-lg-5">
                     <h3 class="mb-sm-4 mb-3">Contact Info</h3>
-                    <p class="cont-para mb-sm-5 mb-4">I enjoy discussing new projects and design challenges. Please
-                        share as
-                        much info, as possible so
-                        we can get the most out of our first catch-up.</p>
+                    <p class="cont-para mb-sm-5 mb-4">I enjoy discussing new opportunities.</p>
                     <div class="cont-details">
                         <!-- <p><i class="fas fa-map-marker-alt"></i>10001, 5th Avenue, 12202 street, USA.</p> -->
                         <p><i class="fas fa-envelope"></i><a target="_blank" href="https://api.whatsapp.com/send/?phone=917075859034">917075859034</a></p>
@@ -170,7 +167,7 @@ Author URL: http://w3layouts.com
         <div class="container pt-4">
             <div class="mx-auto" style="max-width:600px;">
                 <a href="index.html" class="footer-logo py-1">
-                    <i class="fas fa-bold"></i>.
+                    <img class="fas fa-bold" width="120" height="50" src="assets/images/logo.png" alt="RK Tech">
                 </a>
                 <p class="mt-4 text-white">Connect me on following Social media.</p>
                 <div class="social-icons-main mt-4 pb-3">
