updated article link

--- a/blog.html
+++ b/blog.html
@@ -99,6 +99,17 @@ Author URL: http://w3layouts.com
                         <div class="icon-style">
                             <i class="fas fa-lightbulb"></i>
                         </div>
+                        <h4><a target="_blank" href="https://rakesh1996.medium.com/docker-composer-with-nodejs-app-31fcfaffb0ce" class="title-head">Docker Composer with Nodejs App</a></h4>
+                        <a target="_blank" href="https://rakesh1996.medium.com/docker-composer-with-nodejs-app-31fcfaffb0ce" class="btn more p-0">Explore More<i
+                                class="fas fa-long-arrow-alt-right ms-1"></i></a>
+                    </div>
+                </div>
+
+                <div class="col-lg-3 col-md-6 grids-feature">
+                    <div class="area-box">
+                        <div class="icon-style">
+                            <i class="fas fa-lightbulb"></i>
+                        </div>
                         <h4><a target="_blank" href="https://towardsdev.com/nodejs-app-kubernetes-for-beginners-5a6824af9fab" class="title-head">Nodejs app+Kubernetes for beginners</a></h4>
                         <a target="_blank" href="https://towardsdev.com/nodejs-app-kubernetes-for-beginners-5a6824af9fab" class="btn more p-0">Explore More<i
                                 class="fas fa-long-arrow-alt-right ms-1"></i></a>
