Updated cv link

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                             </li>
                         </ul>
                     </div>
-                    <a href="#download" class="btn btn-style mt-5">Download CV</a>
+                    <a href="https://resume.io/r/376LrNmeX" target="_blank" class="btn btn-style mt-5">Check My CV</a>
                 </div>
             </div>
         </div>
