added social media handle

--- a/contact.html
+++ b/contact.html
@@ -100,37 +100,27 @@ Author URL: http://w3layouts.com
                     <div class="cont-details">
                         <!-- <p><i class="fas fa-map-marker-alt"></i>10001, 5th Avenue, 12202 street, USA.</p> -->
                         <p><i class="fas fa-envelope"></i><a target="_blank" href="https://api.whatsapp.com/send/?phone=917075859034">917075859034</a></p>
-                        <p><i class="fas fa-envelope-open-text"></i><a href="mailto:airrakeshkumarsharma@mail.com"
+                        <p><i class="fas fa-envelope-open-text"></i><a href="mailto:airrakeshkumarsharma+blog@gmail.com"
                                 class="mail">airrakeshkumarsharma@mail.com</a></p>
                     </div>
-                    <!-- <h4 class="mb-3 mt-5">Follow Me</h4>
+                    <h4 class="mb-3 mt-5">Follow Me</h4>
                     <ul class="social-icons-contact">
                         <li>
-                            <a href="#twitter">
+                            <a href="https://twitter.com/rakesh_kr_1" target="_blank">
                                 <i class="fab fa-twitter"></i>
                             </a>
                         </li>
                         <li>
-                            <a href="#facebook">
-                                <i class="fab fa-facebook-f"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#linkedinin">
+                            <a href="https://www.linkedin.com/in/rakesh-kumar-sharma-2b98a3157" target="_blank">
                                 <i class="fab fa-linkedin-in"></i>
                             </a>
                         </li>
                         <li>
-                            <a href="#github">
+                            <a href="https://github.com/airrakeshkumarsharma" target="_blank">
                                 <i class="fab fa-github"></i>
                             </a>
                         </li>
-                        <li>
-                            <a href="#instagram">
-                                <i class="fab fa-instagram"></i>
-                            </a>
-                        </li>
-                    </ul> -->
+                    </ul>
                 </div>
                 <!-- <div class="col-md-6 contact-right mt-md-0 mt-5 ps-lg-0">
                     <form action="https://sendmail.w3layouts.com/submitForm" method="post" class="signin-form">
