--- a/index.html
+++ b/index.html
@@ -134,14 +134,14 @@
         <div class="container pt-lg-4">
             <div class="grids-area-hny main-cont-wthree-fea row">
                 <div class="col-md-3 col-sm-4 ps-xl-5">
-                    <h4 class="ab-exper-count mb-sm-4 ps-lg-4">2+</h4>
+                    <h4 class="ab-exper-count mb-sm-4 ps-lg-4">3+</h4>
                     <p class="ab-content ps-lg-4">years of experience working</p>
                 </div>
                 <div class="col-xl-8 col-md-9 col-sm-8 offset-xl-1 ps-xl-0 pe-xl-5 mt-sm-0 mt-4">
                     <h3 class="title-style mb-sm-5 mb-4">I'm a Developer & DevOps Engineer</h3>
                     <div class="row">
                         <div class="col-lg-4 col-md-6 grids-feature">
-                            <div class="area-box active">
+                            <div class="area-box">
                                 <div class="icon-style">
                                     <i class="fas fa-laptop-code"></i>
                                 </div>
