--- a/contact.html
+++ b/contact.html
@@ -43,6 +43,9 @@ Author URL: http://w3layouts.com
                             <a class="nav-link" href="blog.html">Blog</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" target="_blank" href="https://github.com/airrakeshkumarsharma">Github</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link active" href="contact.html">Contact</a>
                         </li>
                     </ul>
