--- a/contact.html
+++ b/contact.html
@@ -46,6 +46,9 @@ Author URL: http://w3layouts.com
                             <a class="nav-link" target="_blank" href="https://github.com/airrakeshkumarsharma">Github</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" target="_blank" href="https://www.npmjs.com/package/build-query">npm package</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link active" href="contact.html">Contact</a>
                         </li>
                     </ul>
