--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
                             <a class="nav-link" target="_blank" href="https://github.com/airrakeshkumarsharma">Github</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" target="_blank" href="https://www.npmjs.com/package/build-query">npm package</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="contact.html">Contact</a>
                         </li>
                     </ul>
