--- a/blog.html
+++ b/blog.html
@@ -105,6 +105,16 @@ Author URL: http://w3layouts.com
                         <div class="icon-style">
                             <i class="fas fa-lightbulb"></i>
                         </div>
+                        <h4><a target="_blank" href="https://rakesh1996.medium.com/stop-using-the-switch-case-from-today-2da182c015ff" class="title-head">Stop Using the switch case from today</a></h4>
+                        <a target="_blank" href="https://rakesh1996.medium.com/stop-using-the-switch-case-from-today-2da182c015ff" class="btn more p-0">Explore More<i
+                                class="fas fa-long-arrow-alt-right ms-1"></i></a>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 grids-feature">
+                    <div class="area-box">
+                        <div class="icon-style">
+                            <i class="fas fa-lightbulb"></i>
+                        </div>
                         <h4><a target="_blank" href="https://rakesh1996.medium.com/saml-2-0-sso-with-nodejs-and-passportjs-19bc38672d76" class="title-head">SAML 2.0 SSO with Nodejs and passportjs</a></h4>
                         <a target="_blank" href="https://rakesh1996.medium.com/saml-2-0-sso-with-nodejs-and-passportjs-19bc38672d76" class="btn more p-0">Explore More<i
                                 class="fas fa-long-arrow-alt-right ms-1"></i></a>
