--- a/blog.html
+++ b/blog.html
@@ -49,6 +49,9 @@ Author URL: http://w3layouts.com
                             <a class="nav-link" target="_blank" href="https://www.npmjs.com/package/build-query">npm package</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" target="_blank" href="https://www.youtube.com/channel/UCUhALZNKg5UM0y1GDDjlOGA">YouTube</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="contact.html">Contact</a>
                         </li>
                     </ul>
