--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
         <div class="container py-md-5 py-4">
             <div class="row align-items-center pt-4">
                 <div class="col-md-6 banner-left pe-xl-5">
-                    <h4>Hi, I'm Rakesh</h4>
+                    <!-- <h4>Hi, I'm Rakesh</h4>
                     <h3 class="mb-3 mt-1">Backend Developer</h3>
                     <p class="banner-sub me-md-5">
                         Solving the business problem by keeping in mind the First principle.
-                    </p>
+                    </p> -->
                     <!-- <div class="d-flex align-items-center buttons-banner mt-sm-5 mt-4">
                         <a href="about.html" class="btn btn-style me-2">Hire Me</a>
                     </div> -->
