Updated th value

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         <div class="container pt-lg-4">
             <div class="grids-area-hny main-cont-wthree-fea row">
                 <div class="col-md-3 col-sm-4 ps-xl-5">
-                    <h4 class="ab-exper-count mb-sm-4 ps-lg-4">3+</h4>
+                    <h4 class="ab-exper-count mb-sm-4 ps-lg-4">3.5+</h4>
                     <p class="ab-content ps-lg-4">years of experience working</p>
                 </div>
                 <div class="col-xl-8 col-md-9 col-sm-8 offset-xl-1 ps-xl-0 pe-xl-5 mt-sm-0 mt-4">
@@ -198,8 +198,7 @@
                 <div class="col-lg-8 ps-lg-5 mt-lg-0 mt-5">
                     <h5 class="title-small mb-1">My Intro</h5>
                     <h3 class="title-style">About Me</h3>
-                    <p class="mt-3">An enthusiastic employee who tries to solve a given business problem with Nodejs and 
-                        delivers quality features in time with responsibility. Nodejs uses almost all companies because of its high performance which is why past 2+ years, I am writing all the business logic in Node Js which is giving a very impressive result but I believe that according to market or client demand we need to also adopt new technology because learning is a process which should never end.</p>
+                    <p class="mt-3">Driven by a passion for solving business challenges, I've spent over 3.5 years specializing in Node.js to deliver high-quality, high-performance solutions. The power and flexibility of Node.js have enabled me to write robust business logic that exceeds expectations. However, I firmly believe that technology is ever-evolving. As market and client demands shift, my commitment to adaptability and continuous learning keeps me at the forefront of innovation</p>
                     <div class="my-info mt-md-5 mt-4">
                         <ul class="single-info">
                             <li class="name-style">Name</li>
